--- a/projects/ngx-floating-img-tester/src/app/shared/components/ngx-code-generator/ngx-code-generator.component.html
+++ b/projects/ngx-floating-img-tester/src/app/shared/components/ngx-code-generator/ngx-code-generator.component.html
@@ -10,6 +10,7 @@
     <ng-container *ngIf="imgAnimationType != null"><span class="ele-attr"> imgAnimationType</span><span class="ele-attr-op">=</span><span class="ele-attr-val">"{{imgAnimationType}}"</span></ng-container>
     <ng-container *ngIf="imgAnimationSpeed != null"><span class="ele-attr"> [imgAnimationSpeed]</span><span class="ele-attr-op">=</span><span class="ele-attr-val">"{{imgAnimationSpeed}}"</span></ng-container>
     <ng-container *ngIf="thumbBgColor != null"><span class="ele-attr"> thumbBgColor</span><span class="ele-attr-op">=</span><span class="ele-attr-val">"{{thumbBgColor}}"</span></ng-container>
+    <ng-container *ngIf="disableScroll != null"><span class="ele-attr"> [disableScroll]</span><span class="ele-attr-op">=</span><span class="ele-attr-val">"{{disableScroll}}"</span></ng-container>
     <ng-container *ngIf="beforeShow != null"><span class="ele-attr"> (beforeShow)</span><span class="ele-attr-op">=</span><span class="ele-attr-val">"{{beforeShow}}"</span></ng-container>
     <ng-container *ngIf="afterShow != null"><span class="ele-attr"> (afterShow)</span><span class="ele-attr-op">=</span><span class="ele-attr-val">"{{afterShow}}"</span></ng-container>
     <ng-container *ngIf="onFullImgLoad != null"><span class="ele-attr"> (onFullImgLoad)</span><span class="ele-attr-op">=</span><span class="ele-attr-val">"{{onFullImgLoad}}"</span></ng-container>
