--- a/projects/ngx-floating-img-tester/src/app/features/api/api.component.html
+++ b/projects/ngx-floating-img-tester/src/app/features/api/api.component.html
@@ -265,6 +265,22 @@
                         <p>true</p>
                       </td>
                     </tr>
+
+                    <tr>
+                      <td class="option-key-td">
+                        <label>disableScroll</label>
+                      </td>
+                      <td>
+                        <p>Enable / Disable page scrolling when show image for <b>desktop</b> browsers only, 
+                            as it's always disabled for mobile platform to meet the mobile experience</p>
+                      </td>
+                      <td>
+                        <p>boolean</p>
+                      </td>
+                      <td>
+                        <p>false</p>
+                      </td>
+                    </tr>
                 </tbody>
               </table>
 
@@ -293,6 +309,7 @@
                   <p class="inner-ele">thumbBgColor: <span class="ele-attr">'#f0f0f0'</span></p>
                   <p class="inner-ele">vpPadding: <span class="ele-attr">20</span></p>
                   <p class="inner-ele">showCloseButton: <span class="ele-attr">true</span></p>
+                  <p class="inner-ele">disableScroll: <span class="ele-attr">false</span></p>
                   <p>{{ '}' }}</p>
               </code>
           </div>
