--- a/projects/ngx-floating-img-tester/src/app/features/examples/examples.component.scss
+++ b/projects/ngx-floating-img-tester/src/app/features/examples/examples.component.scss
@@ -31,6 +31,11 @@
                 width: 25%;
             }
         }
+        .ngx-2-img {
+            ngx-floating-img {
+                width: 50%;
+            }
+        }
     }        
 
 }
@@ -41,6 +46,14 @@
             .ngx-4-img {
                 ngx-floating-img {
                     width: 50%;
+                    &:nth-child(-n + 2) {
+                        margin-bottom: $main-small-padding;
+                    }
+                }
+            }
+            .ngx-2-img {
+                ngx-floating-img {
+                    width: 100%;
                     &:nth-child(-n + 2) {
                         margin-bottom: $main-small-padding;
                     }
