finalizing the new version and update readme file

--- a/projects/ngx-floating-img-tester/src/app/features/api/api.component.html
+++ b/projects/ngx-floating-img-tester/src/app/features/api/api.component.html
@@ -2,7 +2,6 @@
     <div id="api-main-container" fitMainWrapper>
         
       <h1 class="main-title">NGX-FLOATING-IMG</h1>
-        
       <fit-section id="installation-container" title="installation">
         <div class="desc-wrapper">
             <ul>
@@ -271,7 +270,7 @@
                         <label>disableScroll</label>
                       </td>
                       <td>
-                        <p>Enable / Disable page scrolling when show image for <b>desktop</b> browsers only, 
+                        <p>Enable / Disable page scrolling for <b>desktop</b> browsers only, 
                             as it's always disabled for mobile platform to meet the mobile experience</p>
                       </td>
                       <td>
